{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "1628eb29-26d9-4d6b-8db9-cfc6ee66218f",
            "actions": [
                {
                    "name": "PlaceAirport",
                    "type": "Button",
                    "id": "38c1dbda-d313-480b-8c5c-792447a88680",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnAircraft",
                    "type": "Button",
                    "id": "906ec3c2-b3ac-435b-aa66-4c5950ae65e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cb7ac773-1558-416c-a570-297cd71d634d",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceAirport",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29ba8350-9f0d-47d1-85df-c6bd72330d48",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnAircraft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}